# cup

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  SECURITY.md  SKILL.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
adapters/: README.md  namespaces.json
adapters/clojure/: README.md  adapter.json
adapters/dart/: README.md  adapter.json  pubspec.yaml
adapters/dotnet/: README.md  adapter.json  dotnet-cup.csproj
adapters/elixir/: README.md  adapter.json  mix.exs
adapters/go/: README.md  adapter.json  cup.go  cup_test.go  go.mod  scaffold.go
adapters/haskell/: README.md  adapter.json  hs-cup.cabal
adapters/java/: README.md  adapter.json  pom.xml
adapters/python/: README.md  adapter.json  cup.py  cup_codegen.py  pyproject.toml
adapters/python/cup_python.egg-info/: PKG-INFO  SOURCES.txt
adapters/python/examples/: basic.py
adapters/python/tests/: test_codegen.py  test_cup.py
docs/: adapters.md  ai-evals.md  ai.md  architecture.md  compatibility.md  conformance.md  generators.md  node.md  reference-ui.md  routing.md  security.md  testing.md
schema/: uiview.v1.json
scripts/: bootstrap-adapters.mjs  build.mjs  demo-smoke.mjs  pack-check.mjs  starter-smoke.mjs
src/: actions.ts  bind.ts  cleanup.ts  css.ts  index.ts  inspect.ts  mount-remote.ts  mount.ts  negotiation.ts  offline.ts  parser.ts  patch.ts  policy.ts  protocol.ts  remote.ts  repair.ts  router.ts  signal.ts  tracing.ts  types.ts  validate.ts
starters/: README.md
styles/: reference.css
(+184 files in other folders)
