[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cup-python"
version = "0.1.0"
description = "Python adapter for the CUP protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "CUP contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.scripts]
cup-python = "cup_codegen:main"

[tool.setuptools]
py-modules = ["cup", "cup_codegen"]
